2010-01-25  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	* configure.rc:
	Separate external and extra-paths directory lists:
	external    - added to cpp/ld flags and to gled environmnet scripts;
	extra-paths - added to cpp/ld flags only.

2010-01-24  Matevz Tadel  <matevz.tadel@ijs.si>

	* libexec/project7.pl:
	Add GetSetMap entry for SInertVarF.

2010-01-19  Matevz Tadel  <matevz.tadel@ijs.si>

	Final fixes for HTML class docs.

	* bin/gled-generate-htmldoc:
	Make links into ViewCVS.
	Filter-out classes starting as 'ZLink<' and 'list<'.
	Proper output of <> chars into html.
	Remove obsolete cruft.

	* macros/gled_html_doc.C:
	Extract libset name from file path.
	Remove obsolete cruft.

2010-01-17  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix generation of HTML class docs.

	* bin/gled-generate-htmldoc:
	* macros/gled_html_doc.C:
	Adapt to current THtml.
	Modules and templated classes are not handled properly (yet).

2009-12-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	* make/make_base.inc:
	Move -L${GLEDSYS}lib before LDFLAGS which might include other lib
	directiories.

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for OSX build.

	* configure:
	Add sub deduce_libset_dirs to avoid invoking external find. OSX
	find is inferior to GNU find.
	Add LDFLAGS to link command for rnr-lib and remove LD_SURPLUS -
	this is not defined anywhere anymore.

	* make/make_base.inc:
	Add LDFLAGS to link command for base-lib and view-lib.

	* make/make_defs.inc:
	Capture root-ld-flags into ROOT_LDFLAGS, add them to LDFLAGS.

	When cleaning up dependencies use perl instead of sed. OSX sed is
	inferior to GNU sed.

	* make/make_targets.inc:
	Remove apostrophe in comment - it confuses xcode parser.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* configure:
	Write out Makefile.config as soon as possible. Thus, even if
	configure dies, make distclean can still be called.

2009-11-27  Matevz Tadel  <matevz.tadel@ijs.si>

	* make/make_targets.inc: